[package]
name = "servust"
version = "0.2.4"
edition = "2021"
authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/giripriyadarshan/servust"
homepage = "https://github.com/giripriyadarshan/servust"
description = "Rust multiple backend-server template generator"
keywords = ["server", "database", "orm", "template", "boilerplate"]
categories = ["command-line-interface","command-line-utilities", "development-tools"]
exclude = ["target/**",".gitignore",".github/**","LICENSE-MIT",".idea/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
console = "0.15.2"
indicatif = "0.17.1"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }

[[bin]]
name = "servust"
path = "src/main.rs"


[profile.release]
strip = true
panic = 'abort'
codegen-units = 1
lto = true


[package.metadata.bundle]
name = "Servust"
identifier = "io.github.giripriyadarshan.servust"
# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]